# libmath

math/: CMakeLists.txt  boost_gil_all.hpp  combinatorics.cpp  combinatorics.hpp  cvmat.hpp  extent.hpp  filters.cpp  filters.hpp  geometry.cpp  geometry.hpp  geometry_core.hpp  io.hpp  math.cpp  math.hpp  math_all.hpp  quaternion.hpp  rotation.hpp  serialize.hpp  signal.cpp  signal.hpp  signal.impl.hpp  transform.hpp
math/detail/: extents2.inline.hpp  point.inline.hpp  size2.inline.hpp  size3.inline.hpp
math/python/: CMakeLists.txt  mathmodule.cpp  mathmodule.hpp
math/test/: extents.cpp
math/tools/: CMakeLists.txt  io.cpp
